# qa-automation-python

./: .editorconfig  .gitignore  404.html  CNAME  README.md  build-all.sh  conftest.py  cookiecutter.json  export_sources.py  framework_stripped.txt  index.html  mkdocs.yml  objects.inv  publish-all.sh  pyproject.toml  qa-automation-python.code-workspace  release-all.sh  renovate.json  robots.txt  sitemap.xml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/actions/setup-pdm/: action.yml
.github/prompts/: bdd.prompt.md
.github/workflows/: build.yml  release.yml
.specify/memory/: bdd-guide.md  constitution.md
.specify/specs/001-qa-pytest-kafka/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
api/qa-pytest-commons/: index.html
api/qa-pytest-examples/: index.html
api/qa-pytest-kafka/: index.html
api/qa-pytest-playwright/: index.html
api/qa-pytest-rabbitmq/: index.html
api/qa-pytest-rest/: index.html
api/qa-pytest-webdriver/: index.html
api/qa-testing-utils/: index.html
architecture/: index.html
docs/: CNAME  architecture.md  example-tests.md  getting-started.md  index.md  local-report.md  project-structure.md  robots.txt  switching-selenium-to-playwright.md
docs/api/: qa-pytest-commons.md  qa-pytest-examples.md  qa-pytest-kafka.md  qa-pytest-playwright.md  qa-pytest-rabbitmq.md  qa-pytest-rest.md  qa-pytest-webdriver.md  qa-testing-utils.md
example-tests/: index.html
getting-started/: index.html
kuku/: index.html
local-report/: index.html
project-structure/: index.html
qa-pytest-commons/: conftest.py  pyproject.toml
qa-pytest-commons/src/qa/pytest/commons/: abstract_configuration.py  abstract_tests_base.py  generic_steps.py
qa-pytest-commons/src/qa_pytest_commons/: __init__.py  _version.py  abstract_tests_base.py  base_configuration.py  generic_steps.py  ui_configuration.py  ui_protocols.py  ui_steps.py
qa-pytest-commons/tests/: bdd_scenario_tests.py
qa-pytest-examples/: conftest.py  pyproject.toml
qa-pytest-examples/.specify/memory/: bdd-guide.md
qa-pytest-examples/resources/: combined-default-config.ini  rabbitmq-self-default-config.ini  swagger-petstore-default-config.ini  terminalx-default-config.ini
qa-pytest-examples/src/qa/pytest/examples/: swagger_petstore_configuration.py  swagger_petstore_steps.py  terminalx_configuration.py  terminalx_steps.py
qa-pytest-examples/src/qa/pytest/examples/model/: swagger_petstore_credentials.py  swagger_petstore_pet.py  terminalx_credentials.py  terminalx_user.py
qa-pytest-examples/src/qa_pytest_examples/: __init__.py  combined_configuration.py  combined_steps.py  pw_terminalx_configuration.py  pw_terminalx_steps.py  rabbitmq_self_configuration.py  swagger_petstore_steps.py  terminalx_configuration.py  terminalx_steps.py  terminalx_users_configuration.py
qa-pytest-examples/src/qa_pytest_examples/configurations/: combined_configuration.ini  pw_terminalx_configuration.ini  rabbitmq_self_configuration.ini  terminalx_configuration.ini
qa-pytest-examples/src/qa_pytest_examples/model/: __init__.py  credentials.py  swagger_petstore_credentials.py  swagger_petstore_pet.py  terminalx_credentials.py
qa-pytest-examples/tests/: combined_tests.py  kafka_self_tests.py  pw_terminalx_tests.py  rabbitmq_self_tests.py  rabbitmq_tests.py  swagger_petstore_imperative_tests.py  swagger_petstore_mocked_tests.py  swagger_petstore_tests.py  terminalx_tests.py
qa-pytest-kafka/: README.md  pyproject.toml
qa-pytest-kafka/src/qa_pytest_kafka/: __init__.py  _version.py  kafka_configuration.py  kafka_handler.py  kafka_steps.py  kafka_tests.py
qa-pytest-kafka/src/qa_pytest_kafka/configurations/: kafka_configuration.ini
qa-pytest-kafka/tests/: kafka_handler_tests.py  kafka_tests.py
qa-pytest-playwright/: pyproject.toml
qa-pytest-playwright/src/qa_pytest_playwright/: __init__.py  _version.py  logging.ini  playwright_configuration.py  playwright_steps.py  playwright_tests.py  playwright_ui_adapter.py
qa-pytest-playwright/tests/: playwright_self_tests.py
qa-pytest-rabbitmq/: conftest.py  pyproject.toml
qa-pytest-rabbitmq/src/qa_pytest_rabbitmq/: __init__.py  _version.py  message.py  queue_handler.py  rabbitmq_actions.py  rabbitmq_configuration.py  rabbitmq_fixtures.py  rabbitmq_steps.py  rabbitmq_tests.py  rabbitmq_verifications.py
qa-pytest-rabbitmq/tests/: abstract_queue_handler_tests.py  queue_handler_tests.py
qa-pytest-rest/: conftest.py  pyproject.toml
qa-pytest-rest/src/qa/pytest/rest/: rest_configuration.py
qa-pytest-rest/src/qa_pytest_rest/: __init__.py  rest_configuration.py  rest_steps.py  rest_tests.py
qa-pytest-template/: README.md
qa-pytest-webdriver/: conftest.py  project.toml  pyproject.toml
qa-pytest-webdriver/src/qa_pytest_webdriver/: __init__.py  _version.py  selenium_configuration.py  selenium_steps.py  selenium_tests.py  selenium_ui_adapter.py
qa-pytest-webdriver/tests/: webdriver_self_tests.py  x_self_tests.py
qa-testing-utils/: MANIFEST.in  conftest.py  pyproject.toml
qa-testing-utils/src/qa_testing_utils/: __init__.py  _version.py  conftest_helpers.py  exception_utils.py  file_utils.py  logger.py  matchers.py  object_utils.py  pytest_plugin.py  stream_utils.py  thread_utils.py  tuple_utils.py
qa-testing-utils/tests/: file_utils_tests.py  matchers_tests.py
reports/: index.html
reports/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
reports/data/attachments/: 102e8ab76badc832.txt  10544b38822e86df.txt  108af78656a376fb.txt  10a910ccfe7c3f9e.txt  10bb006d4cc9197.txt  10dc111bff96c9c7.txt  1126c7e14d804066.txt  (+900 more)
reports/export/: influxDbData.txt  prometheusData.txt
reports/history/: duration-trend.json  history-trend.json  history.json
reports/widgets/: duration-trend.json  duration.json  history-trend.json  severity.json  status-chart.json  suites.json  summary.json
search/: search_index.json
switching-selenium-to-playwright/: index.html
{{cookiecutter.project_slug}}/: README.md  pyproject.toml
{{cookiecutter.project_slug}}/tests/: test_sample.py
(+3880 files in other folders)
