[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "qa_pytest_commons"
dynamic = ["version"]
description = "PyTest commons library"
authors = [{ name = "Adrian Herscu", email = "adrian.herscu@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
dependencies = [
  "qa-testing-utils",
  "tenacity",
  "PyHamcrest",
  "pytest",
  "pyfunctional",
  "more-itertools"
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-html",
  "pytest-cov",
  "mypy",
  "isort",
  "autopep8"
]

[tool.hatch.envs.default.scripts]
test = "pytest"
lint = "mypy src"
format = "autopep8 --in-place --recursive src"
