[project]
name = "qa_pytest_examples"
version = "0.1.1"
description = "PyTest examples"
authors = [{ name = "Adrian Herscu", email = "adrian.herscu@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "qa-testing-utils @ file://../qa-testing-utils",
  "qa-pytest-commons @ file://../qa-pytest-commons",
  "qa-pytest-rest @ file://../qa-pytest-rest",
  "qa-pytest-webdriver @ file://../pytest-webdriver",
  "tenacity",
  "PyHamcrest",
  "pytest",
  "pyfunctional",
  "more-itertools"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.envs.default]
path = ".hatch/envs/default"
dependencies = [
  "pytest",
  "pytest-cov",
  "mypy",
  "isort",
  "autopep8"
]

[tool.hatch.envs.default.scripts]
test = "pytest"
lint = "mypy src"
format = "autopep8 --in-place --recursive src"
