[tool.pdm]

[tool.pdm.build]
package-dir = "src"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "qa-pytest-rest"
dynamic = ["version"]
authors = [{ name = "Adrian Herscu", email = "adrian.herscu@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
dependencies = [
  "qa-testing-utils",
  "qa-pytest-commons",
  "requests==2.32.5",
  "tenacity==9.1.4",
  "pytest==8.4.2",
  "PyHamcrest==2.1.0",
  "pyfunctional==1.5.0",
  "more-itertools==10.8.0",
  "returns==0.26.0",
]

[tool.pdm.version]
source = "scm"
write_to = "qa_pytest_rest/_version.py"
write_template = "__version__ = '{}'"
fallback_version = "0.0.0"
