[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "qa-testing-utils"
dynamic = ["version"]
description = "Testing utilities library for QA automation"
authors = [{ name = "Adrian Herscu", email = "adrian.herscu@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
dependencies = [
  "PyHamcrest",
  "pyfunctional",
  "ppretty",
  "allure-pytest",
  "more-itertools",
  "returns"
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-html",
  "pytest-cov",
  "mypy",
  "isort",
  "autopep8"
]

[tool.hatch.envs.default.scripts]
test = "pytest"
lint = "mypy src"
format = "autopep8 --in-place --recursive src"
