[tool.pdm]
distribution = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "qa-testing-utils"
dynamic = ["version"]
description = "QA testing utilities"
authors = [
    { name = "Adrian Herscu", email = "adrian.herscu@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.13"
license = {text = "Apache-2.0"}
dependencies = [
    "PyHamcrest",
    "pyfunctional",
    "ppretty",
    "allure-pytest",
    "more-itertools",
    "returns",
]

[tool.pdm.version]
source = "scm"
write_to = "qa_testing_utils/__init__.py"
write_template = "__version__ = '{}'"
fallback_version = "0.0.0"