[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "qa-testing-utils"
dynamic = ["version"]
description = "QA testing utilities"
authors = [
    { name = "Adrian Herscu", email = "adrian.herscu@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.13"
license = {text = "Apache-2.0"}
dependencies = [
    "pytest==8.4.2",
    "PyHamcrest==2.1.0",
    "pyfunctional==1.5.0",
    "ppretty==1.3",
    "allure-pytest==2.15.3",
    "more-itertools==10.8.0",
    "returns==0.26.0",
]

[tool.pdm.version]
source = "scm"
write_to = "qa_testing_utils/_version.py"
write_template = "__version__ = '{}'"
fallback_version = "0.0.0"

[project.entry-points.pytest11]
qa-testing-utils = "qa_testing_utils.pytest_plugin"
